--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint ./src --fix",
     "dev": "./node_modules/.bin/webpack --progress --colors --watch",
+    "build": "./node_modules/.bin/webpack",
     "start": "./node_modules/.bin/webpack && node $NODE_DEBUG_OPTION index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -53,7 +54,14 @@
   },
   "dependencies": {
     "agenda": "^0.9.0",
+    "axios": "^0.15.3",
     "koa": "^2.0.0-alpha.7",
-    "koa-router": "^7.0.1"
+    "koa-bodyparser": "^2.3.0",
+    "koa-logger": "^1.3.0",
+    "koa-router": "^7.0.1",
+    "mongodb": "^2.2.12",
+    "pythonic": "0.0.6",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1"
   }
 }
