--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "intelliduler",
+  "name": "agenda-rest",
   "version": "0.5.0",
-  "description": "Scheduling-as-a-Service",
-  "main": "index.js",
+  "description": "Scheduling as a Service",
+  "main": "cli.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint ./src --fix",
-    "dev": "./node_modules/.bin/webpack --progress --colors --watch",
+    "dev": "./node_modules/.bin/webpack && DB_HOST=192.168.10.101 DB_NAME=agenda node $NODE_DEBUG_OPTION index.js",
     "build": "./node_modules/.bin/webpack",
-    "start": "./node_modules/.bin/webpack && node $NODE_DEBUG_OPTION index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,10 +14,19 @@
     "url": "git+ssh://git@gitlab.com/satratech/intelliduler.git"
   },
   "keywords": [
-    "scheduler"
+    "schedule",
+    "scheduling",
+    "scheduler",
+    "webservice",
+    "restful",
+    "rest",
+    "agenda"
   ],
   "author": "Keyvan Mir Mohammad Sadeghi <keyvan.m.sadeghi@gmail.com>",
   "license": "ISC",
+  "bin": {
+    "agenda-rest": "index.js"
+  },
   "bugs": {
     "url": "https://gitlab.com/satratech/intelliduler/issues"
   },
@@ -54,6 +62,7 @@
   },
   "dependencies": {
     "agenda": "^0.9.0",
+    "commander": "^2.9.0",
     "koa": "^2.0.0-alpha.7",
     "koa-bodyparser": "^2.3.0",
     "koa-logger": "^1.3.0",
