--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "agenda-rest",
   "version": "0.5.0",
   "description": "Scheduling as a Service",
-  "main": "cli.js",
+  "main": "index.js",
+  "jsnext:main": "./src/index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint ./src --fix",
     "dev": "./node_modules/.bin/webpack && DB_HOST=192.168.10.101 DB_NAME=agenda node $NODE_DEBUG_OPTION index.js",
@@ -25,7 +26,7 @@
   "author": "Keyvan Mir Mohammad Sadeghi <keyvan.m.sadeghi@gmail.com>",
   "license": "MIT",
   "bin": {
-    "agenda-rest": "index.js"
+    "agenda-rest": "cli.js"
   },
   "bugs": {
     "url": "https://github.com/assister-ai/agenda-rest/issues"
