--- a/package.json
+++ b/package.json
@@ -63,12 +63,14 @@
   },
   "dependencies": {
     "agenda": "^0.9.0",
+    "babel-runtime": "^6.18.0",
     "commander": "^2.9.0",
     "koa": "^2.0.0-alpha.7",
     "koa-bodyparser": "^2.3.0",
     "koa-logger": "^1.3.0",
     "koa-router": "^7.0.1",
     "pythonic": "0.0.6",
+    "regenerator-runtime": "^0.10.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
   }
