--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "jsnext:main": "./src/index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint ./src --fix",
+    "lint": "eslint ./src --fix",
     "dev": "npm run build && DB_HOST=192.168.10.101 node $NODE_DEBUG_OPTION cli.js",
-    "build": "./node_modules/.bin/webpack",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,11 +33,10 @@
   },
   "homepage": "https://github.com/assister-ai/agenda-rest#README",
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
@@ -53,13 +52,11 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-plugin-transform-strict-mode": "^6.11.3",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "eslint": "^3.3.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-babel": "^3.3.0",
-    "file-system": "^2.2.2",
-    "webpack": "^2.1.0-beta.27"
+    "webpack": "^3.5.5"
   },
   "dependencies": {
     "agenda": "^0.9.0",
