--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-*.js
-*.js.map
-!src/**/*.js
-!webpack.config.js
-!cli.js
-
+dist
 package-lock.json
 
 # Created by https://www.gitignore.io/api/linux,webstorm,node
