--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "agenda-rest",
   "version": "0.6.18",
   "description": "Scheduling as a Service",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "jsnext:main": "./src/index.js",
   "scripts": {
     "prepublish": "npm run build",
-    "lint": "eslint ./src --fix",
+    "lint": "xo",
     "dev": "npm run build && DB_HOST=192.168.10.101 node $NODE_DEBUG_OPTION cli.js",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/assister-ai/agenda-rest.git"
+    "url": "git+ssh://git@github.com/agenda/agenda-rest.git"
   },
+  "files": [
+    "cli.js",
+    "dist"
+  ],
   "keywords": [
     "schedule",
     "scheduling",
@@ -30,10 +34,11 @@
     "agenda-rest": "cli.js"
   },
   "bugs": {
-    "url": "https://github.com/assister-ai/agenda-rest/issues"
+    "url": "https://github.com/agenda/agenda-rest/issues"
   },
-  "homepage": "https://github.com/assister-ai/agenda-rest#README",
+  "homepage": "https://github.com/agenda/agenda-rest#README",
   "devDependencies": {
+    "ava": "^0.25.0",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
@@ -57,7 +62,8 @@
     "eslint": "^3.3.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-babel": "^3.3.0",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "xo": "^0.18.2"
   },
   "dependencies": {
     "agenda": "^0.9.0",
