--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "agenda": "^1.0.3",
     "babel-runtime": "^6.18.0",
     "commander": "^2.9.0",
-    "koa": "^2.0.0-alpha.7",
+    "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
     "koa-router": "^7.0.1",
