Add engines to package.json
At least `yarn` will throw an error if anyone attempts to run with an incompatible version.

--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
     "request-promise": "^4.1.1",
     "supertest": "^3.0.0"
   },
+  "engines": {
+    "node": ">=7"
+  },
   "xo": {
     "space": 2,
     "rules": {
