--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "prepublish": "npm run build",
     "lint": "xo",
-    "dev": "npm run build && node $NODE_DEBUG_OPTION cli.js",
-    "build": "webpack",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
     "test": "ava && npm run lint",
     "start": "npm run build && node cli.js"
   },
@@ -45,25 +45,14 @@
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.8.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
-    "babel-plugin-transform-es2015-for-of": "^6.8.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.14.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.12.0",
-    "babel-plugin-transform-es2015-parameters": "^6.11.4",
-    "babel-plugin-transform-es2015-spread": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-plugin-transform-regenerator": "^6.14.0",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-plugin-transform-strict-mode": "^6.11.3",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.7.2",
     "eslint": "^4.18.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-babel": "^4.1.2",
     "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.8",
     "xo": "^0.20.3"
   },
   "dependencies": {
@@ -86,10 +75,6 @@
   "xo": {
     "space": 2,
     "rules": {
-      "space-before-function-paren": [
-        "error",
-        "never"
-      ],
       "max-params": [
         "error",
         5
