--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "plugins": [
-    "add-module-exports"
+    "add-module-exports",
+    "transform-util-promisify"
     ],
     "presets": [
       ["env", {
