--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "xo",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "test": "ava && npm run lint",
-    "start": "npm run build && node cli.js"
+    "test": "ava ./dist/test.js && npm run lint",
+    "start": "npm run dev && node cli.js"
   },
   "repository": {
     "type": "git",
@@ -46,6 +46,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "babel-plugin-transform-util-promisify": "^0.1.3",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.7.2",
     "eslint": "^4.18.1",
