--- a/package.json
+++ b/package.json
@@ -39,16 +39,16 @@
   },
   "homepage": "https://github.com/agenda/agenda-rest#README",
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/register": "^7.0.0-beta.40",
     "ava": "^0.25.0",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.13.2",
     "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^8.0.0-beta.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-plugin-transform-util-promisify": "^0.1.3",
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.7.2",
+    "babel-preset-env": "^7.0.0-beta.3",
     "eslint": "^4.18.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-babel": "^4.1.2",
@@ -72,6 +72,11 @@
   },
   "engines": {
     "node": ">=7"
+  },
+  "ava": {
+    "require": [
+      "@babel/register"
+    ]
   },
   "xo": {
     "space": 2,
