--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.40",
     "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
     "@babel/register": "^7.0.0-beta.40",
     "ava": "^0.25.0",
     "babel-eslint": "^8.2.2",
@@ -48,7 +49,6 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-plugin-transform-util-promisify": "^0.1.3",
-    "babel-preset-env": "^7.0.0-beta.3",
     "eslint": "^4.18.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-babel": "^4.1.2",
