--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
     "koa-router": "^7.0.1",
-    "pythonic": "0.0.6",
+    "pythonic": "^0.2.1",
     "regenerator-runtime": "^0.11.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
