--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
     "presets": [
       ["@babel/preset-env", {
         "targets": {
-          "node": "current"
+          "node": "7.10"
         }
       }]
     ]
