--- a/package.json
+++ b/package.json
@@ -48,23 +48,24 @@
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.2",
     "babel-plugin-transform-util-promisify": "^0.2.2",
-    "eslint": "^4.18.1",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-babel": "^4.1.2",
+    "eslint": "^5.2.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-node": "7.0.1",
     "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.8",
-    "xo": "^0.20.3"
+    "webpack-cli": "^3.1.0",
+    "xo": "^0.21.1"
   },
   "dependencies": {
-    "agenda": "^1.0.3",
+    "agenda": "^2.0.0",
     "babel-runtime": "^6.18.0",
     "commander": "^2.9.0",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
     "koa-router": "^7.0.1",
-    "pythonic": "^0.2.1",
-    "regenerator-runtime": "^0.11.1",
+    "pythonic": "^1.0.1",
+    "regenerator-runtime": "^0.12.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "supertest": "^3.0.0"
