--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
   },
   "homepage": "https://github.com/agenda/agenda-rest#README",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.55",
-    "@babel/core": "^7.0.0-beta.55",
-    "@babel/preset-env": "^7.0.0-beta.55",
-    "@babel/register": "^7.0.0-beta.55",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "ava": "^0.25.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.2",
