--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "scheduling",
     "scheduler",
     "webservice",
+    "microservice",
     "restful",
     "rest",
     "agenda"
@@ -41,36 +42,36 @@
   "homepage": "https://github.com/agenda/agenda-rest#README",
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
     "ava": "^0.25.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^8.0.0-beta.2",
-    "eslint": "^5.2.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
+    "eslint": "^5.6.0",
     "eslint-loader": "^2.1.0",
-    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-node": "7.0.1",
-    "webpack": "^4.0.0",
+    "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
     "xo": "^0.23.0"
   },
   "dependencies": {
-    "agenda": "^2.0.0",
-    "babel-runtime": "^6.18.0",
-    "commander": "^2.9.0",
-    "koa": "^2.4.1",
-    "koa-bodyparser": "^4.2.0",
-    "koa-logger": "^3.1.0",
-    "koa-router": "^7.0.1",
+    "agenda": "^2.0.2",
+    "babel-runtime": "^6.26.0",
+    "commander": "^2.18.0",
+    "koa": "^2.5.3",
+    "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
     "pythonic": "^1.0.1",
-    "regenerator-runtime": "^0.12.0",
-    "request": "^2.79.0",
-    "request-promise": "^4.1.1",
-    "supertest": "^3.0.0"
+    "regenerator-runtime": "^0.12.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
+    "supertest": "^3.3.0"
   },
   "engines": {
-    "node": ">=7"
+    "node": ">=8"
   },
   "xo": {
     "space": 2,
