--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "xo --fix",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "test": "ava dist/test.js && npm run lint",
+    "test": "ava ./dist/test.js && npm run lint",
     "start": "npm run dev && node cli.js"
   },
   "repository": {
