--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - mongo --version
   - mongod --version
   - 'if [ "$AGENDA_VERSION" ]; then yarn add agenda@$AGENDA_VERSION; fi'
-  - npm run build
+  - ava --version
   - "until nc -z 127.0.0.1 27017 ; do echo Waiting for MongoDB; sleep 1; done"
 env:
   - AGENDA_VERSION=^2.0.0
