--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@babel/core": "7.8.7",
     "@babel/preset-env": "7.8.7",
     "@babel/register": "7.8.6",
-    "ava": "2.4.0",
+    "ava": "=2.4.0",
     "babel-loader": "8.0.6",
     "supertest": "4.0.2",
     "webpack": "4.42.0",
