--- a/.github/workflows/on_merge_pr.yml
+++ b/.github/workflows/on_merge_pr.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           registry-url: https://registry.npmjs.org/
       - run: npm install
-      - run: npm run build
+      - run: npm run prepublish 
 # Waiting for npm_token to be added to GitHub to publish.
 #      - run: npm publish
 #        env:
