--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "agenda-rest",
-  "version": "1.3.1",
+  "name": "@nftoolkit/agenda-rest",
+  "version": "1.0.0",
   "description": "Scheduling as a Service",
   "main": "./dist/index.js",
   "jsnext:main": "./src/index.js",
   "scripts": {
-    "snyk-protect": "snyk protect",
     "format": "prettier-eslint --eslint-config-path ./.eslintrc.js --write $PWD'/**/*.js'",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
     "test": "ava ./dist/test.js && npm run format",
     "start": "npm run dev && node cli.js",
-    "prepublish": "npm run snyk-protect && npm run build"
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/agenda/agenda-rest.git"
+    "url": "git+ssh://git@github.com/nftoolkit/agenda-rest.git"
   },
   "files": [
     "cli.js",
@@ -38,9 +37,9 @@
     "agenda-rest": "cli.js"
   },
   "bugs": {
-    "url": "https://github.com/agenda/agenda-rest/issues"
+    "url": "https://github.com/nftoolkit/agenda-rest/issues"
   },
-  "homepage": "https://github.com/agenda/agenda-rest#README",
+  "homepage": "https://github.com/nftoolkit/agenda-rest#README",
   "devDependencies": {
     "@babel/cli": "7.14.8",
     "@babel/core": "7.15.0",
@@ -57,7 +56,7 @@
     "webpack-cli": "4.7.2"
   },
   "dependencies": {
-    "agenda": "^4.0.0",
+    "agenda": "^4.2.1",
     "async-counter": "^1.1.0",
     "babel-runtime": "^6.26.0",
     "commander": "^8.0.0",
@@ -68,8 +67,7 @@
     "pythonic": "^2.0.3",
     "regenerator-runtime": "^0.13.3",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "snyk": "^1.424.2"
+    "request-promise": "^4.2.4"
   },
   "engines": {
     "node": ">=8"
@@ -90,6 +88,5 @@
         5
       ]
     }
-  },
-  "snyk": true
+  }
 }
