--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,13 @@
 {
-  "plugins": [
-    ],
-    "presets": [
-      ["@babel/preset-env", {
+  "plugins": [],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
         "targets": {
-          "node": "12.16"
+          "node": "16.14"
         }
-      }]
+      }
     ]
+  ]
 }
