--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nftoolkit/agenda-rest",
-  "version": "1.0.3",
+  "version": "1.0.2",
   "description": "Scheduling as a Service",
   "main": "./dist/index.js",
   "jsnext:main": "./src/index.js",
@@ -11,9 +11,8 @@
     "test": "ava ./dist/test.js && npm run format",
     "start": "npm run dev && node cli.js",
     "preversion": "npm test",
-    "version": "npm version patch",
     "prepublish": "npm run build",
-    "publish": "npm run version && npm publish"
+    "publish": "npm version patch && npm publish"
   },
   "repository": {
     "type": "git",
